# GhostMCP

./: .env.example  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.lock.txt  requirements-release.lock.txt  requirements.lock.txt
.ci/: ci-fixes.patch
.github/: dependabot.yml
.github/workflows/: apply-ci-fixes.yml  apply-phase2-once.yml  apply-phase3-once.yml  ci.yml  codeql.yml  diagnostic-source.yml  refresh-locks-once.yml  refresh-security-locks-once.yml  release.yml  scorecard.yml
deploy/container/: Dockerfile
deploy/systemd/: ghostmcp.service
docs/: CONFIGURATION.md  DASHBOARD.md  DEPLOYMENT.md  PLUGINS.md  README.md  RUNBOOK.md  SECURITY-OPERATIONS.md
ghostmcp/: __main__.py  audit.py  config.py  credentials.py  dashboard.py  dashboard_security.py  database.py  execution.py  plugins.py  proxy.py  scanners.py  scheduling.py  security.py  server.py  transport_security.py  workflows.py
ghostmcp/parsers/: __init__.py  amass.py  assetfinder.py  cloudflair.py  dnsx.py  feroxbuster.py  ffuf.py  gitleaks.py  gobuster.py  gowitness.py  jaeles.py  nmap.py  nuclei.py  s3scanner.py  sqlmap.py  subfinder.py  trufflehog.py  wpscan.py
ghostmcp/static/: style.css
ghostmcp/templates/: base.html  dashboard.html
ghostmcp/templates/engagements/: detail.html  list.html  new.html
ghostmcp/templates/reports/: view.html
ghostmcp/templates/scans/: detail.html
ghostmcp/templates/schedule/: list.html  new.html  row.html
tests/: test_audit.py  test_credentials_hardening.py  test_dashboard_security.py  test_database.py  test_execution.py  test_integration_registration.py  test_plugins_hardening.py  test_scanners_runtime.py  test_scheduling.py  test_security.py  test_security_hardening.py  test_server_controls.py  test_server_new_tools.py  test_server_registration.py  test_tool_signatures.py  test_transport_security.py  test_workflows.py
