[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostmcp-server"
version = "0.1.0"
description = "Production-ready cybersecurity tooling MCP server for AI agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GhostMCP" }]
license = { text = "AGPL-3.0-or-later" }
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
  "mcp>=1.2.0",
  "defusedxml>=0.7.1",
  "fastapi>=0.109.0",
  "uvicorn>=0.29.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "bandit>=1.7.0",
  "pip-audit>=2.7.0",
  "build>=1.2.0",
  "hvac>=2.0.0",
  "boto3>=1.34.0",
]
dashboard = [
  "fastapi>=0.109.0",
  "uvicorn>=0.29.0",
  "jinja2>=3.1.0",
]

[project.scripts]
ghostmcp = "ghostmcp.server:main"
ghostmcp-dashboard = "ghostmcp.__main__:run_dashboard"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "ghostmcp_server.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["ghostmcp"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = ["^tests/"]

[tool.setuptools]
packages = ["ghostmcp"]
