[build-system]
requires = ["setuptools>=83", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostmcp-server"
version = "0.2.0a1"
description = "Security-focused MCP server for authorized assessment workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GhostMCP" }]
license = "AGPL-3.0-or-later"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "mcp>=1.2.0",
  "defusedxml>=0.7.1",
  "fastapi>=0.109.0",
  "uvicorn>=0.29.0",
  "msgpack>=1.2.1",
  "pydantic-settings>=2.14.2",
  "starlette>=1.3.1",
  "pyjwt>=2.13.0",
  "cryptography>=48.0.1",
  "python-multipart>=0.0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "bandit>=1.7.0",
  "pip-audit>=2.7.0",
  "build>=1.2.0",
  "twine>=5.0.0",
  "setuptools>=83",
]
dashboard = [
  "jinja2>=3.1.0",
  "python-multipart>=0.0.30",
]
credentials = [
  "cryptography>=48.0.1",
]
release = [
  "build>=1.2.0",
  "twine>=5.0.0",
  "setuptools>=83",
]
vault = [
  "cryptography>=48.0.1",
  "hvac>=2.0.0",
]
aws = [
  "cryptography>=48.0.1",
  "boto3>=1.34.0",
]
gcp = [
  "cryptography>=48.0.1",
  "google-cloud-secret-manager>=2.20.0",
]

[project.scripts]
ghostmcp = "ghostmcp.server:main"
ghostmcp-dashboard = "ghostmcp.__main__:run_dashboard"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "ghostmcp_server.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["ghostmcp"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = ["^tests/"]

[tool.setuptools.packages.find]
include = ["ghostmcp*"]

[tool.setuptools.package-data]
ghostmcp = [
  "templates/**/*.html",
  "static/**/*",
]
